BcgHub.Api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcg-hub-api
  namespace: bcg-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcg-hub-api
  template:
    metadata:
      labels:
        app: bcg-hub-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: bcg-hub-api
          image: ghcr.io/radixal-sro/bcg-hub-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
