BcgHub.Api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcg-hub-api
  namespace: bcg-hub
spec:
  selector:
    app: bcg-hub-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
