BcgHub.Api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcg-hub-api
  namespace: bcg-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: dev.radixal.net
      http:
        paths:
          - path: /bcg-hub/api
            pathType: Prefix
            backend:
              service:
                name: bcg-hub-api
                port:
                  number: 80
